Tests/ShouldFail/try29.adl
CONTEXT Try29
SPEC A ISA B
SPEC B ISA A
s :: A * B [TOT,UNI,INJ]

ENDCONTEXT

{- 
   Purpose: When defined 
                SPEC B ISA A
                SPEC A ISA B
            Then an error message is given:
                The following concepts are equal:
                A and B.
                ==============================
                The following concepts are equal:
                A and B.
    Since both cases are equivalent, a similar message should be the result.
-}